# web-template

./: .env  .env.defaults  .env.production.defaults  .gitignore
android/: .gitignore  .project  build.gradle  capacitor.settings.gradle
android/app/: .project  build.gradle.kts  capacitor.build.gradle
android/rust/: Cargo.toml
android/rust/.cargo/: config.toml
android/rust/dotenv_codegen/: Cargo.toml
android/rust/dotenv_codegen/src/: lib.rs
android/rust/src/: clamp.rs  config.rs  lib.rs  native_rust_config_plugin.rs  option_interval.rs  option_sleep.rs
android/rust/src/bridge/: bridge_init.rs  main_pipe.rs  mod.rs  native_run.rs
android/rust/src/stream/: media_session_service.rs  message_types.rs  mod.rs  native_audio.rs  native_rust_audio_service.rs  native_rust_stream_plugin.rs  stream_client.rs
buildSrc/: build.gradle.kts
web/: .gitignore  README.md  androidTest.ts  app.config.ts  capacitor.config.ts  package.json  playwright.android.ts  playwright.config.ts  pnpm-lock.yaml
web/assets/: main.html
web/scripts/: dotenv.sh
web/scripts/android/: android-build.sh  android-env.sh  android-production.sh  android-run.sh  android-zip.sh
web/src/: EchoPlugin.ts  LoggerPlugin.ts  Main.tsx  app.tsx  entry-client.tsx  global.d.ts  platform.ts  routes.tsx
web/src/logging/: clientLogger.ts  logger.ts  serverLogger.ts  winstonAxiomTransport.ts  winstonLogger.tsx
web/src/pages/: Page1.tsx  Page2.tsx
web/src/style/: fontPreamble.style.tsx  global.style.tsx  theme.ts
web/tests/: android.spec.ts  chromium.spec.ts
web/vite/: linariaVitePlugin.ts
(+16 files in other folders)
