[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.7.0"
ndk-glue = "0.7.0"
ndk-context = "0.1.1"
#jni = "0.20.0"
jni = "0.21.1"
android_logger = "0.13.1"
tao-macros = "0.1.1"

[dependencies]
log = "0.4.19"
once_cell = "1.18.0"
tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.19.0", features = [
  "rustls-tls-webpki-roots",
] }
futures-util = "0.3.28"
anyhow = "1.0.71"
#tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
rust-lapper = "1.1.0"
crossbeam-channel = "0.5.8"
libc = "0.2.147"
pin-project-lite = "0.2.9"
futures-core = "0.3.28"
# dotenv_codegen = { version = "0.15", path = "./dotenv_codegen" }
